--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-resizable-panels": "^1.0.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
